<resources>
    <string name="app_name">Laboratorio03-04</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_VideoView">VideoView</string>
    <string name="title_SearchView">SearchView</string>
    <string name="title_ProgressBar">ProgressBar</string>
    <string name="title_ProgressBarH">ProgressBar Horizontal</string>
    <string name="title_ratingbar">RatingBar</string>
    <string name="title_resultado">Resultado</string>
</resources>
